# port-scanner-cli

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
openspec/: project.md
openspec/changes/archive/2026-03-04-rename-cli-to-kebab-case/: proposal.md  tasks.md
openspec/changes/archive/2026-03-04-rename-cli-to-kebab-case/specs/cli/: spec.md
openspec/specs/cli/: spec.md
src/port_scanner/: __init__.py  __main__.py  scanner.py
src/port_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_scanner.py
